--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@600&family=Titillium+Web&display=swap');
 
+
+.container {
+  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.418) ), url('https://res.cloudinary.com/dtpgi0zck/image/upload/s--SsFGdDoP--/c_fill,h_580,w_860/v1/EducationHub/photos/ocean-waves.jpg');
+  background-size: cover;
+  background-position: center;
+}
 
 .container {
   height: 100%;
@@ -7,5 +14,6 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  flex-direction: column;
 }
 
