updates to ui styles

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@600&family=Titillium+Web&display=swap');
 
-
+html, body, #root {
+  font: 0.9rem sans-serif;
+  background: #0a1f44;
+  color: #1e2432;
+  height: 100%;
+  margin: 0;
+}
 .container {
-  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.418) ), url('https://res.cloudinary.com/dtpgi0zck/image/upload/s--SsFGdDoP--/c_fill,h_580,w_860/v1/EducationHub/photos/ocean-waves.jpg');
+  background: linear-gradient( rgba(255, 255, 255, 0.3), rgba(0, 0, 0, 0.418) ), url('https://res.cloudinary.com/dtpgi0zck/image/upload/s--SsFGdDoP--/c_fill,h_580,w_860/v1/EducationHub/photos/ocean-waves.jpg');
   background-size: cover;
   background-position: center;
 }
 
 .container {
   height: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   justify-content: center;
   align-items: center;
