--- a/src/styles/title.css
+++ b/src/styles/title.css
@@ -2,6 +2,6 @@
     margin-top: 40px;
     font-family: 'Open Sans', sans-serif;
     font-size: 32px;
-    color: antiquewhite
+    color: white
 
 }
