--- a/src/styles/weather.css
+++ b/src/styles/weather.css
@@ -1,5 +1,7 @@
 .layout{
-    display: flex;
+    display: flex !important;
     margin-top: 40px;
     justify-content: center;
+    flex-direction: column !important;
+    align-items: center;
 }
